--- a/index.html
+++ b/index.html
@@ -10,27 +10,15 @@
         <link rel="stylesheet" href="master.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button class="navbar-toggle collapsed" name="button">
-                        <span id="sr-only"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">gambar/logo</a>
-                </div>
-
-            </div>
-        </nav>
         <div class="container">
             <!-- <h1>Hello, world!</h1> -->
             <!-- ::before -->
             <form id="form_login" class="form-signin" action="index.html" method="post">
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <!--email-->
-                <label for="inputEmail" class="sr-only">Email address</label>
+                <!-- <label for="inputEmail" class="sr-only">Email address</label>
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                Username or Email address
+                Username or Email address -->
                 <!--glyphicon dipakai untuk membuat icon pada html. Bagian dari bootstrap -->
                 <input type="email" name="Usermail" placeholder="Email address" class="form-control" required autofocus>
                 <!--password-->
