--- a/index.html
+++ b/index.html
@@ -5,38 +5,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Pisang Bakar : instant upload and get your community</title>
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="master.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        <div class="container">
-            <!-- <h1>Hello, world!</h1> -->
-            <!-- ::before -->
-            <form id="form_login" class="form-signin" action="index.html" method="post">
-                <h2 class="form-signin-heading">Please sign in</h2>
-                <!--email-->
-                <!-- <label for="inputEmail" class="sr-only">Email address</label>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                Username or Email address -->
-                <!--glyphicon dipakai untuk membuat icon pada html. Bagian dari bootstrap -->
-                <input type="email" name="Usermail" placeholder="Email address" class="form-control" required autofocus>
-                <!--password-->
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" name="password" placeholder="Password" class="form-control" required>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me">
-                        Remember me
-                    </label>
+        <div class="site-wrapper">
+            <div class="site-wrapper-inner">
+                <div class="cover-container">
+                    <div class="inner cover">
+                        <form id="form_login" class="form-signin" action="index.html" method="post">
+                            <h2 class="form-signin-heading">Please sign in</h2>
+                            <!--glyphicon dipakai untuk membuat icon pada html. Bagian dari bootstrap -->
+                            <input type="email" name="Usermail" placeholder="Email address" class="form-control" required autofocus>
+                            <!--password-->
+                            <label for="inputPassword" class="sr-only">Password</label>
+                            <input type="password" name="password" placeholder="Password" class="form-control" required>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="remember-me">
+                                    Remember me
+                                </label>
+                            </div>
+                            <button type="submit" name="signedin" class="btn btn-lg btn-primary btn-block">Sign in</button>
+                        </form>
+                    </div>
+                    <div class="mastfoot">
+                      <div class="inner">
+                        <p>
+                          Anjaaayy
+                        </p>
+                      </div>
+                    </div>
                 </div>
-                <button type="submit" name="signedin" class="btn btn-lg btn-primary btn-block">Sign in</button>
-
-            </form>
+            </div>
         </div>
-
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
+        <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
-<!-- http://getbootstrap.com/examples/signin/?-->
