--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Pisang Bakar : instant upload and get your community</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" href="master.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <div class="site-wrapper">
