ngebenerin tampilan. dropdown masih salah

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
                         </form>
                     </div>
                     <div class="mastfoot">
-                      <div class="inner">
-                        <p>
-                          Anjaaayy
-                        </p>
-                      </div>
+                        <div class="inner">
+                            <p>
+                                Anjaaayy
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="js/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
