--- a/dashboard-user.html
+++ b/dashboard-user.html
@@ -10,9 +10,10 @@
         <link rel="stylesheet" href="css/side-menu.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
+        <!-- bagian navbar -awal-->
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
-                <!-- navbar bagian logo -->
+                <!-- navbar bagian logo -awal-->
                 <div class="navbar-header">
                     <button class="navbar-toggle collapsed" name="button">
                         <span id="sr-only"></span>
@@ -20,91 +21,86 @@
                     </button>
                     <a class="navbar-brand" href="#">gambar/logo</a>
                 </div>
-                <!-- navbar bagian logo -->
-                <!-- navbar bagian kanan -->
+                <!-- navbar bagian logo -akhir-->
+                <!-- navbar bagian kanan -awal-->
                 <div class="navbar-collapse collapse" id="navbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="">
-                            <a class="btn btn-default" href="#menu-toggle" id="menu-toggle" data-toggle="collapse">test</a>
+                        <li class="menu-user">
+                            <a href="#menu-toggle" id="menu-toggle">Nama depan user</a>
                         </li>
                     </ul>
-                    <!-- kolom search -->
-                    <form class="navbar-form navbar-right" action="index.html" method="post">
-                        <label for="search-coloumn" class="sr-only"></label>
+                    <!-- kolom search -awal-->
+                    <form class="navbar-form navbar-right" action="dashboard-user.html" method="post">
                         <input class="form-control" type="text" name="search-coloumn" placeholder="Search...">
+                        <button type="submit" class="btn btn-default" name="submit-cari">Search</button>
                     </form>
-                    <!-- kolom search -->
+                    <!-- kolom search -akhir-->
                 </div>
-                <!--  navbar bagian kanan -->
+                <!--  navbar bagian kanan -akhir-->
             </div>
         </nav>
-        <div id="wrapper">
+        <!-- bagian navbar -akhir-->
+        <!-- bagian wrapper -awal-->
+        <div id="wrapper" class="toggled">
             <!-- side wrapper -->
             <div id="sidebar-wrapper">
-                <!-- <div class="sidebar-nav"> -->
                 <ul class="sidebar-nav">
+                    <li class="avatar">
+                      <div id="circle">
+                        <img class="user-pict" src="zebra.png" alt=""/>
+                      </div>
+                        </li>
                     <li class="sidebar-brand">
                         <a href="#">
-                            Start Bootstrap
+                            Nama user
                         </a>
                     </li>
                     <li>
-                        <a href="#">Dashboard</a>
+                        <a href="#">Friends</a>
                     </li>
                     <li>
-                        <a href="#">Shortcuts</a>
+                        <!-- <a href="#">Setting</a> -->
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Setting<span class="caret"></span>
+                          <ul class="dropdown-menu">
+                            <li class=""><a href="#">Help</a></li>
+                            <li class=""><a href="#">Feedback</a></li>
+                            <li class=""><a href="#">About Us</a></li>
+                          </ul>
+                        </div>
                     </li>
+                    <!--  ada dropdown disini dalam setting -->
                     <li>
-                        <a href="#">Overview</a>
-                    </li>
-                    <li>
-                        <a href="#">Events</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Logout</a>
                     </li>
                 </ul>
-                <!-- </div> -->
             </div>
             <!--  page content -->
             <div id="page-content-wrapper">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Simple Sidebar</h1>
-                            <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the
-                                page content will be pushed off canvas.</p>
-                            <p>Make sure to keep all page content within the
-                                <code>#page-content-wrapper</code>.</p>
-                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                            <p>
+                                bagian konten
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- page content -->
         </div>
-        <!-- <body>
-      <div class="site-wrapper">
-        <div class="site-wrapper-inner">
-
-        </div>
-      </div> -->
-        <!-- bagian navbar -->
-
-        <!-- bagian navbar -->
+        <!-- bagian wrapper -akhir -->
         <!--  bagian script -->
+        <script src="js/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js\jquery-1.12.3.js"></script>
         <script>
-            $("#menu-toggle").click(function(e {e.preventDefault();
+            $(".dropdown-toggle").click(function(event) {
+              $(".dropdown-toggle").dropdown();
+            });
+            $("#menu-toggle").click(function(e) {
+                e.preventDefault();
                 $("#wrapper").toggleClass("toggled");
-                $("#sidebar-wrapper").hide();}));
+            });
         </script>
         <!--  bagian script -->
     </body>
